aggiunto accordion per filtri

--- a/src/assets/scss/volt/_variables.scss
+++ b/src/assets/scss/volt/_variables.scss
@@ -10,7 +10,7 @@ $white:    #ffffff;
 $gray-100: #f3f7fa;
 $gray-200: #f5f8fb;
 $gray-300: #F0F3F6;
-$gray-400: #eaedf2;
+$gray-400: #F5F8FE;
 $gray-500: #d1d7e0;
 $gray-600: #93a5be;   
 $gray-700: #66799e;   
