aggiunti bottoni admin e dropzone

--- a/src/components/Admin/Prodotti/Prodotti.module.scss
+++ b/src/components/Admin/Prodotti/Prodotti.module.scss
@@ -26,5 +26,11 @@
 	max-width: 68rem;
 	margin: 1rem auto;
 	padding: 0 1rem;
-}
 
+	button {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		gap: 0.5rem;
+	}
+}
