Migliorato dettaglio prodotto

--- a/src/components/DettaglioProdotto/DettaglioProdotto.module.scss
+++ b/src/components/DettaglioProdotto/DettaglioProdotto.module.scss
@@ -1,80 +1,6 @@
-.wrapper {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: flex-start;
-	gap: 1rem;
-}
-
-.product-title,
-.product-buy,
-.product-description {
-}
-
-
-.product-image {
-	max-width: 30rem;
-	img {
-		width: 30rem;
-	}
-}
-
-.product-buy {
-	display: flex;
-	flex-flow: column nowrap;
-}
-
-.product-buy > * {
-}
-
-.product-title {
-	order: 2;
-}
-
-.product-image {
-	order: 1;
-}
-
-.product-buy {
-	order: 3;
-}
-
-.product-description {
-	order: 5;
-}
-
-.product-option, .product-price {
-	background: white;
-}
-
-@media screen and (max-width: 800px) {
-	.wrapper {
-		max-width: 100vw;
-		gap: 0rem;
-	}
-
-	.product-image,
-	.product-buy {
-		width: 100vw;
-		max-width: 100vw;
-	}
-
-	.product-image img {
-		max-width: 100vw;
-	}
-
-	.product-title {
-		order: 1;
-	}
-
-	.product-image {
-		order: 2;
-	}
-
-	.product-buy {
-		order: 3;
-	}
-
-	.product-description {
-		order: 4;
-	}
+.height-max {
+	min-height: 13rem;
+	height: 13rem;
+	max-height: 13rem;
+	object-fit: scale-down;
 }
