--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -1,11 +1,16 @@
 .container {
 	background-color: white;
+	min-height: 100vh;
 	p,
 	a,
 	h1,
 	h2,
 	h3 {
 		color: black !important;
+	}
+	
+	button {
+		color:white !important;
 	}
 
 	img {
