--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -1,4 +1,3 @@
-
 .cart {
 	width: 2rem;
 }
@@ -27,7 +26,27 @@
 	}
 
 	.toggler {
-		margin-left: -2rem;
+		margin-left: -2.7rem;
 	}
 }
 
+.counter-prod {
+	border-radius: 50%;
+	width: 1.1rem;
+	height: 1.1rem;
+	font-size: 0.9rem;
+	color: white;
+	position: absolute;
+	right: 1rem;
+	top: 2.1rem;
+	transform: translate(-50%, -50%);
+}
+
+.cart {
+	width: 2.5rem;
+	margin-right: 1rem;
+}
+
+.link-cart {
+	padding: 0 !important;
+}
